# claude-skills

Atlas-D365fo/: .gitignore  Dockerfile  EVIDENCE.md  LICENSE  PUSH_AND_DEPLOY.md  README.md  docker-compose.yml
Atlas-D365fo/.circleci/: config.yml
Atlas-D365fo/backend/app/: api.py
Atlas-D365fo/backend/app/ai/: embedder.py
Atlas-D365fo/backend/app/d365/: auth.py  edmx.py  er.py  xpp.py
Atlas-D365fo/backend/app/generate/: er_assist.py  er_report.py  openapi.py  postman.py
Atlas-D365fo/backend/tests/: conftest.py  test_api.py  test_er.py  test_er_assist.py  test_xpp.py
Atlas-D365fo/backend/tests/fixtures/: HERJournalService.xpp  sample_edmx.xml  sample_er_config.xml
Atlas-D365fo/deploy/: main.tf  terraform.tfvars.example
Atlas-D365fo/evidence/: results_20260705T083928Z.json  results_20260705T093628Z.json  results_20260705T184216Z.json
Atlas-D365fo/frontend/: next.config.mjs  package-lock.json  package.json  vercel.json
Atlas-D365fo/frontend/app/: layout.jsx
Atlas-D365fo/frontend/app/er/: page.jsx
Atlas-D365fo/frontend/app/xpp/: page.jsx
commands/: caveman.md
d365-atlas/: README.md
d365-atlas/backend/: pyproject.toml
d365-atlas/backend/app/: __init__.py  api.py  config.py  main.py
d365-atlas/backend/app/ai/: codegen.py
d365-atlas/backend/app/d365/: client.py
d365-atlas/backend/app/store/: vectorstore.py
d365-atlas/backend/tests/: test_edmx.py  test_embedder.py
d365-atlas/frontend/app/: globals.css  page.jsx
